--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,29 +6,29 @@ version: 2.1
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  build-and-test:
-    # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
-    # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # Be sure to update the Docker image tag below to openjdk version of your application.
-    # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
-    docker:
-      - image: cimg/base:2020.01
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      # Checkout the code as the first step.
-      - checkout
-      # Use mvn clean and package as the standard maven build phase
-      - run:
-          name: Build
-          command: mvn -B -DskipTests clean package
-      # Then run your tests!
-      - run:
-          name: Test
-          command: mvn test
-       - run: # print the name of the branch we're on
-          name: "What branch am I on?"
-          command: echo ${CIRCLE_BRANCH}
+  # build-and-test:
+  #   # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
+  #   # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+  #   # Be sure to update the Docker image tag below to openjdk version of your application.
+  #   # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
+  #   docker:
+  #     - image: cimg/base:2020.01
+  #   # Add steps to the job
+  #   # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  #   steps:
+  #     # Checkout the code as the first step.
+  #     - checkout
+  #     # Use mvn clean and package as the standard maven build phase
+  #     - run:
+  #         name: Build
+  #         command: mvn -B -DskipTests clean package
+  #     # Then run your tests!
+  #     - run:
+  #         name: Test
+  #         command: mvn test
+  #      - run: # print the name of the branch we're on
+  #         name: "What branch am I on?"
+  #         command: echo ${CIRCLE_BRANCH}
   print_hello:
     docker:
       - image: circleci/node:13.8.0
@@ -55,8 +55,4 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
         - build
-      # - print_hello
-      # - print_world:
-      #     requires:
-      #       - print_hello
-      # - build-and-test
+  
