--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,8 +69,8 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - attack_workspace:
-        at: ~/
+      - attach_workspace:
+          at: ~/
       - run: cat ~/output.txt  
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
