--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: return 0
+      - run: echo "this exercide:sharing file"
       - run: 
           name: on error
           command: echo "Hello error"
